--- a/example/styles/main.css
+++ b/example/styles/main.css
@@ -1,3 +1,16 @@
+body {
+	background: #e2dfdf;
+	background-image: radial-gradient(rgba(226, 186, 203, 0.44) 30%, transparent 0), radial-gradient(rgba(180, 176, 241, 0.38) 30%, transparent 0);
+	background-size: 30px 30px;
+	background-position: 0 0, 15px 15px;
+}
+
+#github-ribbon {
+	position: absolute;
+	top: 0px;
+	right: 0px;
+}
+
 .container {
 	width: 1000px;
 	margin: 0 auto;
@@ -7,6 +20,7 @@
 		margin-bottom: 30px;
 	}
 }
+
 .button {
 	border: none;
 	box-shadow: none;
@@ -16,4 +30,10 @@
 	color: #fff;
 	padding: 10px 20px;
 	cursor: pointer;
+}
+
+header.container {
+	font-family: 'Shrikhand', cursive;
+	color: #c88dff;
+	font-size: 24px;
 }
