--- a/example/styles/main.css
+++ b/example/styles/main.css
@@ -1,6 +1,6 @@
 body {
-	background: #e2dfdf;
-	background-image: radial-gradient(rgba(226, 186, 203, 0.44) 30%, transparent 0), radial-gradient(rgba(180, 176, 241, 0.38) 30%, transparent 0);
+	background: rgba(241, 233, 233, 0.14);
+    background-image: radial-gradient(rgba(224, 206, 214, 0.28) 30%, transparent 0), radial-gradient(rgba(137, 130, 255, 0.11) 30%, transparent 0);
 	background-size: 30px 30px;
 	background-position: 0 0, 15px 15px;
 	overflow-x: hidden;
