--- a/src/chartify.css
+++ b/src/chartify.css
@@ -31,56 +31,61 @@ $font: 'PT Sans Narrow', sans-serif;
     }
   }
 
-  .marks {
+  .marks-wrapper {
+    overflow: hidden;
     display: inline-block;
 
-    .ruler-row {
+    .marks {
       display: inline-block;
 
-      .mark {
-        position: relative;
-        border-top: 1px solid rgba(249,250,249, 0.9);
-        border-left: 1px solid rgba(249,250,249, 0.9);
-        box-sizing: border-box;
+      .ruler-row {
+        display: inline-block;
 
-        &:hover {
-          cursor: pointer;
+        .mark {
+          position: relative;
+          border-top: 1px solid rgba(249,250,249, 0.9);
+          border-left: 1px solid rgba(249,250,249, 0.9);
+          box-sizing: border-box;
+
+          &:hover {
+            cursor: pointer;
+
+            .tooltiptext {
+              visibility: visible;
+            }
+          }
+
+          .line {
+            position: relative;
+            z-index: 99;
+            box-sizing: border-box;
+            transform-origin: left center;
+
+            &:hover + .tooltiptext {
+              visibility: hidden;
+            }
+          }
 
           .tooltiptext {
-            visibility: visible;
-          }
-        }
-
-        .line {
-          position: relative;
-          z-index: 99;
-          box-sizing: border-box;
-          transform-origin: left center;
-
-          &:hover + .tooltiptext {
+            position: absolute;
+            z-index: 999;
             visibility: hidden;
-          }
-        }
+            width: 120px;
+            left: $box-width;
+            border-radius: 10px;
+            border: 1px solid white;
+            color: #fff;
+            padding: 5px 5px;
+            font-family: $font;
 
-        .tooltiptext {
-          position: absolute;
-          z-index: 999;
-          visibility: hidden;
-          width: 120px;
-          left: $box-width;
-          border-radius: 10px;
-          border: 1px solid white;
-          color: #fff;
-          padding: 5px 5px;
-          font-family: $font;
+            div {
+              word-wrap: break-word;
+              text-align: center;
 
-          div {
-            word-wrap: break-word;
-            text-align: center;
-
-            &.date {
-              margin: 10px 0 5px;
-              font-weight: bold;
+              &.date {
+                margin: 10px 0 5px;
+                font-weight: bold;
+              }
             }
           }
         }
