add border radius

--- a/example/main/main.css
+++ b/example/main/main.css
@@ -74,6 +74,10 @@ body {
             &.four {
                 background-color: #ae88ea;
             }
+
+            &.five {
+                background-color: #448AFF;
+            }
         }
     }
 
