--- a/example/main/components/Chart/chart.css
+++ b/example/main/components/Chart/chart.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
 body {
+    margin: 8% 0;
 	overflow-x: hidden;
 
     .container {
@@ -22,8 +23,8 @@ body {
             width: 650px;
 
             h2 {
-                font-family: 'Shrikhand', cursive;
-                color: #c88dff;
+                font-family: 'Poppins', sans-serif;
+                color: #447bff;
                 font-size: 36px;
                 margin: 0;
             }
@@ -35,10 +36,6 @@ body {
                 margin: 0;
             }
         }
-    }   
-
-    main {
-        height: 520px;
     }
 
     footer {
@@ -46,14 +43,14 @@ body {
 
         div {
             text-align: center;
-            font-family: 'Shrikhand', cursive;
-            color: rgba(216, 30, 164, 0.47);
+            font-family: 'Poppins', sans-serif;
+            color: #447bff;
             font-size: 18px;
             margin: 20px 0;
 
             a {
                 cursor: pointer;
-                color: rgba(22, 74, 144, 0.6);
+                color: #447bff;
             }
         }
     }
@@ -61,7 +58,7 @@ body {
 
 #forkongithub {
     a {
-        background: #ae88ea;
+        background: #9e9e9e;
         color: #fff;
         text-decoration: none;
         font-family: arial, sans-serif;
@@ -74,7 +71,7 @@ body {
         transition: 0.5s;
 
         &:hover {
-            background: #e82086;
+            background: #447bff;
             color: #fff;
         }
 
