--- a/example/main/components/Controls/controls.css
+++ b/example/main/components/Controls/controls.css
@@ -6,20 +6,21 @@
         margin: 10px 0 20px 0;
         padding: 10px 0;
     }
-}
 
-.button {
-    margin: 5px 10px;
-    border: none;
-    box-shadow: none;
-    text-transform: uppercase;
-    font-size: 16px;
-    color: #fff;
-    padding: 10px 20px;
-    cursor: pointer;
-    outline: none;
+    button {
+        margin: 5px 10px;
+        border: 2px solid #447bff;
+        background: transparent;
+        box-shadow: none;
+        text-transform: uppercase;
+        font-size: 16px;
+        color: #447bff;
+        padding: 10px 20px;
+        cursor: pointer;
+        outline: none;
 
-    &:hover {
-        opacity: 1 !important;
+        &:hover {
+            opacity: 1 !important;
+        }
     }
 }
