--- a/example/main/components/Chart/chart.css
+++ b/example/main/components/Chart/chart.css
@@ -12,6 +12,12 @@ body {
         text-align: center;
     }
 
+    h2 {
+        text-align: center;
+        font-family: 'Poppins', sans-serif;
+        color: #447bff;
+    }
+
     header {
         padding: 20px 0 0 0;   
 
